--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+        </dependency>
+    </dependencies>
 
 </project>
